Fixed up some margins on mobile, disallowed scrolling while the mobile menu is open

--- a/src/style/components/_navbar.scss
+++ b/src/style/components/_navbar.scss
@@ -8,7 +8,7 @@
 
 #nav-bar .hamburger-react {
   display: none;
-  margin: 0.5em 2em;
+  margin: 0.5em 0.8em;
   float: right;
   @include respond(tab-land) {
     font-size: 18px;
