--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -32,10 +32,10 @@
     text-align: left;
 
     @include respond(tab-land) {
-      font-size: 7rem;
+      font-size: 6.5rem;
     }
     @include respond(tab-port) {
-      font-size: 3.6rem;
+      font-size: 4.65rem;
       // text-align: center;
     }
     @include respond(phone) {
@@ -57,6 +57,11 @@
   .hero-subtitle {
     font-size: 2.8rem;
     text-align: left;
+
+    @include respond(tab-port) {
+      font-size: 2.25rem;
+    }
+
     @include respond(phone) {
       font-size: 2rem;
       line-height: 1.5;
@@ -88,7 +93,7 @@
     display: flex;
     flex-direction: row;
 
-    @include respond(tab-port) {
+    @include respond(phone) {
       flex-direction: column;
       align-items: center;
       justify-content: center;
@@ -121,14 +126,15 @@
     width: 40em;
     border-radius: 50%;
     @include respond(tab-land) {
+      height: 32em;
+      width: 32em;
+    }
+
+    @include respond(tab-port) {
       height: 30em;
       width: 30em;
     }
 
-    @include respond(phone) {
-      height: 25em;
-      width: 25em;
-    }
     @include respond(phone-xs) {
       height: 20em;
       width: 20em;
